--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "@barba/core": "^2.9.7",
     "gsap": "^3.6.0",
     "scrolltrigger": "^1.0.1"
   }
